--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ port = 8000
 DATABASE_URL = "mongodb://localhost:27017"
 
 JWT_SECRET_KEY = "kdjsnfsnvlkmnfsvhadfnm565262vbsnvnsm"
+
+
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_USER = ''
+EMAIL_PASS = ''
+EMAIL_FROM = ''
